Stop it from jumping

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -142,15 +142,19 @@ radio4000-player .Layout {
 	border: 0 !important;
 }
 
+#starwarswrap,
+#starwars {
+	width: 320px;
+	max-width: 100%;
+	height: 10.5rem;
+}
 #starwarswrap {
 	/*min-width: 320px;*/
-	height: 10.5rem;
 	background: rgb(20,15,15);
 }
 
 #starwars {
 	display: block;
-	height: 10.5rem;
 }
 
 /* Dark theme */
